<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_navigation"
    app:startDestination="@+id/navigation_intro">

    <fragment
        android:id="@+id/navigation_intro"
        android:name="com.avocado.android.ui.start.intro.IntroFragment"
        android:label="@string/title_intro"
        tools:layout="@layout/fragment_start_intro">
        <action
            android:id="@+id/action_start_navigation_intro_to_create_account_fragment"
            app:destination="@id/navigation_create_account" />
    </fragment>
    <fragment
        android:id="@+id/navigation_create_account"
        android:name="com.avocado.android.ui.start.createaccount.CreateAccountFragment"
        android:label="@string/title_create_account"
        tools:layout="@layout/fragment_start_create_account">
        <action
            android:id="@+id/action_start_navigation_create_account_to_select_role_fragment"
            app:destination="@id/navigation_select_role" />
        <action
            android:id="@+id/action_start_navigation_create_account_to_login_fragment"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/navigation_select_role"
        android:name="com.avocado.android.ui.start.selectrole.SelectRoleFragment"
        android:label="Select Role"
        tools:layout="@layout/fragment_start_select_role">
        <action
            android:id="@+id/action_start_navigation_select_role_to_login_fragment"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.avocado.android.ui.start.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_start_login">
        <action
            android:id="@+id/action_start_navigation_login_to_otp_fragment"
            app:destination="@id/navigation_otp" />
    </fragment>
    <fragment
        android:id="@+id/navigation_otp"
        android:name="com.avocado.android.ui.start.otp.OtpFragment"
        android:label="@string/title_otp"
        tools:layout="@layout/fragment_start_otp">
        <action
            android:id="@+id/action_start_navigation_otp_to_success_fragment"
            app:destination="@id/navigation_success" />
    </fragment>
    <fragment
        android:id="@+id/navigation_success"
        android:name="com.avocado.android.ui.start.success.SuccessFragment"
        android:label="@string/title_success"
        tools:layout="@layout/fragment_start_success" />

</navigation>