<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        android:background="#F5F5F1">
        <RelativeLayout
            android:id="@+id/fragment_start_intro_welcome_layout"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/logo_background_1"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp">
            <ImageView
                android:id="@+id/fragment_start_intro_welcome_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_avocado"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <TextView
            android:id="@+id/fragment_start_intro_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avocado_scout"
            android:textSize="35sp"
            android:textColor="#112A20"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/fragment_start_intro_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_your_avocado_farm_health"
            android:textSize="16sp"
            android:textColor="#5C7778"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp">
                <ImageView
                    android:id="@+id/fragment_start_intro_item_1_logo_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:background="@drawable/logo_background_2"
                    android:src="@drawable/ic_note"
                    android:gravity="center"
                    android:layout_marginEnd="12dp"/>
                <TextView
                    android:id="@+id/fragment_start_intro_item_1_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly_scouting_made_easy"
                    android:textSize="14sp"
                    android:textColor="#1A1A1A"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp">
                <ImageView
                    android:id="@+id/fragment_start_intro_item_2_logo_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:background="@drawable/logo_background_2"
                    android:src="@drawable/ic_pill"
                    android:gravity="center"
                    android:layout_marginEnd="12dp"/>
                <TextView
                    android:id="@+id/fragment_start_intro_item_2_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_expert_advisory"
                    android:textSize="14sp"
                    android:textColor="#1A1A1A"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp">
                <ImageView
                    android:id="@+id/fragment_start_intro_item_3_logo_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:background="@drawable/logo_background_2"
                    android:src="@drawable/ic_bell"
                    android:gravity="center"
                    android:layout_marginEnd="12dp"/>
                <TextView
                    android:id="@+id/fragment_start_intro_item_3_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stay_inform_with_alerts"
                    android:textSize="14sp"
                    android:textColor="#1A1A1A"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fragment_start_intro_select_language_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom">
            <TextView
                android:id="@+id/fragment_start_intro_select_language_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/select_language"
                android:textSize="14sp"
                android:textColor="#5C7778"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
            <Button
                android:id="@+id/fragment_start_intro_english_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:padding="12dp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background_1"
                android:foreground="@drawable/custom_ripple_1"
                android:text="@string/english"
                android:textSize="18sp"
                android:textColor="#1A3F30"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/fragment_start_intro_swahili_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:padding="12dp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background_2"
                android:foreground="@drawable/custom_ripple_1"
                android:text="@string/swahili"
                android:textSize="18sp"
                android:textColor="#1A3F30"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>