<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        android:background="#F5F5F1">
        <ImageView
            android:id="@+id/fragment_start_otp_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_lock"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp" />
        <TextView
            android:id="@+id/fragment_start_otp_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/almost_there"
            android:textSize="24sp"
            android:textColor="#112A20"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/fragment_start_otp_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_code_sent_to"
            android:textSize="16sp"
            android:textColor="#5C7778"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="64dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    android:background="@null"
                    android:layout_margin="4dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_start_otp_phone_number_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:background="@drawable/text_input_background_1"
                        android:textSize="28sp"
                        android:textColor="#1A1A1A"
                        android:textStyle="bold"
                        android:gravity="center"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/fragment_start_otp_didn_t_get_it_resend_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_get_it"
                android:textSize="13sp"
                android:textColor="#9CA3AF"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"/>
            <Button
                android:id="@+id/fragment_start_otp_continue_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:padding="12dp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background_3"
                android:foreground="@drawable/custom_ripple_1"
                android:text="@string/continue_"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:icon="@drawable/ic_arrow_right"
                app:iconGravity="textEnd"
                app:iconTint="@color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>