<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        android:background="#F5F5F1">
        <ImageView
            android:id="@+id/fragment_start_login_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_phone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp" />
        <TextView
            android:id="@+id/fragment_start_login_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hi!"
            android:textSize="24sp"
            android:textColor="#112A20"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/fragment_start_login_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_phone_number"
            android:textSize="16sp"
            android:textColor="#5C7778"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="64dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    android:background="@null">
                    <AutoCompleteTextView
                        android:id="@+id/fragment_start_login_country_code_auto_complete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textSize="16sp"
                        android:textColor="#1A1A1A"
                        android:textStyle="bold"
                        android:text="@string/country_code_kenya"
                        android:background="@drawable/text_input_background_2"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_help"
                    android:background="@null">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_start_login_phone_number_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone"
                        android:textSize="16sp"
                        android:textColor="#1A1A1A"
                        android:textStyle="bold"
                        android:background="@drawable/text_input_background_3"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <Button
                android:id="@+id/fragment_start_login_continue_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:padding="12dp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background_3"
                android:foreground="@drawable/custom_ripple_1"
                android:text="@string/continue_"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:icon="@drawable/ic_arrow_right"
                app:iconGravity="textEnd"
                app:iconTint="@color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>